[package]
name = "opsclock"
version = "0.1.0"
edition = "2021"
description = "Mission-control-style terminal world-clock TUI"
authors = ["emerson000"]
repository = "https://git.ribbon-stairs.ts.net/emerson/opsclock"
readme = "README.md"
keywords = ["clock", "tui", "terminal", "world-clock", "timezone"]
categories = ["command-line-utilities"]

[[bin]]
name = "opsclock"
path = "src/main.rs"

[features]
default = ["notify"]
notify = ["dep:notify-rust"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
jiff = { version = "0.2", features = ["tzdb-bundle-always"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
color-eyre = "0.6"
dirs = "5"
notify-rust = { version = "4", optional = true }
interim = { version = "0.2.1", default-features = false, features = ["std", "jiff_0_2"] }

[profile.release]
lto = true
